@@ -749,3 +749,5 @@ fun element_result keywords (Thy_Element.Element (tr, NONE)) st = atom_result ke
 end;
 
 end;
+
+structure Local_Theory : LOCAL_THEORY = struct open Local_Theory; end;
